import {TranslationKeys} from './types';

export const english: TranslationKeys = {
  signIn: {
    emailPlaceholder: 'Email',
    emailInvalid: 'Email is invalid',
    emailRequired: 'Email is required',
    passwordPlaceholder: 'Password',
    passwordRequired: 'Password is required',
    helpButton: 'Need help?',
    smsAgreement:
      'By clicking "Log In" you agree to receive SMS text message from chime to verify your identity',
    signInButton: 'Log In',
    errorTitle: 'Yikes!',
    errorButton: 'Try Again',
    errorMessage: 'Email and password combination do not match our records.',
  },
  home: {
    success: 'Success',
  },
};
