...
            />
          }
        />
        <Pressable
          testID={`${RouteKeys.SIGN_IN}: help`}
          style={styles.needHelp}
          onPress={() => Alert.alert('Hang On', 'Help is coming!')}>
          <Text style={styles.needHelpText}>
            {Translations.signIn.helpButton}
          </Text>
        </Pressable>
        <Text
          testID={`${RouteKeys.SIGN_IN}: smsAgreement`}
...
